resources/public/css/style.css
/* some style */
@font-face {
  font-family: 'Open Sans Light';
  font-style: normal;
  font-weight: 300;
  src: url('../fonts/OpenSans-Light.eot');
  src: local('Open Sans Light'), local('OpenSans-Light'),
    url('../fonts/OpenSans-Light.eot') format('embedded-opentype'),
    url('../fonts/OpenSans-Light.woff') format('woff');
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/OpenSans.eot');
  src: local('Open Sans'), local('OpenSans'),
    url('../fonts/OpenSans.eot') format('embedded-opentype'),
    url('../fonts/OpenSans.woff') format('woff');
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 600;
  src: url('../fonts/OpenSans-Semibold.eot');
  src: local('Open Sans Semibold'), local('OpenSans-Semibold'),
    url('../fonts/OpenSans-Semibold.eot') format('embedded-opentype'),
    url('../fonts/OpenSans-Semibold.woff') format('woff');
}

@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 300;
  src: local('Open Sans Light Italic'), local('OpenSansLight-Italic'),
    url('../fonts/OpenSansLight-Italic.eot') format('embedded-opentype'),
    url('../fonts/OpenSansLight-Italic.woff') format('woff');
}

html {
    height: 100%;
    width: 100%;
    font-family: 'Roboto',sans-serif;
} body {
    margin: 0; padding: 0;
    min-height: 100%;
    max-width: 100%;
}
#dashboard {
  display: grid;
  grid-template-columns: 100%;
  /*grid-template-rows: 50% 50%;*/
  width: 100vw;
  height: 100vh;
}
.view {
  position: relative;
}
.map {
  width: 100%;
  height: 100%;
}

/*#view-1 {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
}
#view-2 {
  grid-column: 1 / 2;
  grid-row: 2 / 3;
}*/

.view .info .connection-status {
  display: inline-block;
  background-color: red;
  border-radius: 8px;
  width: 8px;
  height: 8px;
  margin-left: 8px;
}
.view .info .connection-status.connected {
  background-color: green;
}

.view .info {
  position: absolute;
  top: 0;
  right: 0;
  background-color: rgba(0,0,0,0.4);
  color: white;
  font-family: Menlo;
  z-index: 10000;
  text-align: right;
  padding: 5px 10px;
}

.graph, .map, .vis, .console {
  height: 100%;
  width: 100%;
}

.console {
    overflow: auto;
}
.console span.row {
    display: block;
    font-family: "Menlo";
    font-size: 10pt;
    margin-bottom: 0.25em;
}
.console span.date {
    font-weight: bold;
}
.console span.date:after {
    content: " - ";
}

.c3-axis {
    fill: #aaa;
}
.c3-axis path.domain, .c3-axis .tick line {
    stroke: #aaa;
}
.c3-line {
    stroke-width: 2;
}
text {
    font-family: 'Roboto';
    font-size: 10pt;
}

#repl {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 15em;
  border: 0;
  z-index: 10000;
  font-size: 12pt;
  overflow: auto;

  box-shadow: 0px 0px 6px 2px rgba(7, 54, 66, 0.99) !important;
  background-color: rgba(7, 54, 66, 0.99);
}

.help {
    box-shadow: 0px 0px 8px 2px rgba(64, 64, 64, 0.99) !important;

    position: absolute;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 100000;
    background-color: white;
    padding: 0.5em 1em;

    display: flex;
    flex-wrap: wrap;
    max-height: 35%;
    overflow: scroll;
}
.help a {
    position: fixed;
    top: 16px;
    right: 50px;
    cursor: pointer;
}
.help .section {
    min-width: 250px;
}
.help .section td {
    font-family: 'Droid Sans Mono',monospace;
    font-size: 9pt;
}
.help .section td.has-doc {
    text-decoration: underline;
    cursor: pointer;
    position: relative;
}
.help .section td .doc {
  display: none;
}
.help .section td.has-doc:hover .doc {
  display: block;
  position: absolute;
  background: white;
  border: 1px solid black;
  top: 1.4em;
  left: 0px;
  width: 300px;
  padding: 1em;
}

#hud {
  z-index: 1000;
  position: absolute;
  top: calc(50vh - 4em);
  left: 15vw;
  width: 70vw;
  font-size: 3em;
  background-color: rgba(0,0,0,0.4);
  border-radius: 16px;
  color: white;
  padding: 0.5em;
  text-align: center;
  opacity: 0;
  transition: opacity 0.2s ease-in;
  font-family: Menlo,'Droid Sans Mono',monospace;
  max-height: 30vh;
  text-overflow: ellipsis;
  overflow: hidden;
}
#hud.visible {
  transition: opacity 0.2s ease-out ;
  opacity: 1;
}

#pasteboard {
  position: absolute;
  z-index: 1000;
  top: 5vw;
  left: 15vw;
  width: 70vw;
  height: 50vh;
  background-color: white;
  border-radius: 16px;

  display: flex;
  flex-direction: column;
  padding: 2em;

  opacity: 0;
  transform: translate3d(0,5vh,0);
  transition: all 0.3s ease-in;
}
#pasteboard.visible {
  opacity: 1;
  transform: translate3d(0,0,0);
  transition: all 0.3s ease-out;
}
#pasteboard input {
    background-color: transparent;
    border: none;
    outline: none;
    margin-bottom: 1em;
    font-family: Menlo,'Droid Sans Mono',monospace;
    font-size: 14pt;
}
#pasteboard textarea {
    flex: 1;
    background-color: transparent;
    outline: none;
    border: none;
    font-size: 14pt;
    font-family: Menlo,'Droid Sans Mono',monospace;
    margin-bottom: 2em;
}
#pasteboard button {
    padding: 1em;
    border: none;
    font-family: Menlo,'Droid Sans Mono',monospace;
    font-size: 14pt;
    font-weight: bold;
    outline: none;
}
#pasteboard button:hover {
    background-color: rgba(0,0,0,0.4);
    cursor: pointer;
}

